Use JDK 16, linguist zprintrc